--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -1,6 +1,8 @@
 \chapter{Convolutional neural networks for computer vision}
 \label{image-ann}
 
+% different sizes
+
 \section{Understanding computer vision}
 \label{computer-vision}
 
