--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -1,3 +1,68 @@
+@book{dl,
+    title={Deep Learning},
+    author={Ian GOODFELLOW and Yoshua BENGIO and Aaron COURVILLE},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@Article{simple-cells,
+  title={Linearity and normalization in simple cells of the macaque primary visual cortex},
+  author={Matteo CARANDINI and David J. HEEGER and J. Anthony MOVSHON},
+  journal={Journal of Neuroscience},
+  volume={17},
+  number={21},
+  pages={8621--8644},
+  year={1997},
+  publisher={Soc Neuroscience}
+}
+
+@Article{hubel-cats1,
+  title={Receptive fields of single neurones in the cat's striate cortex},
+  author={David H. HUBEL and Torsten N. WIESEL},
+  journal={The Journal of physiology},
+  volume={148},
+  number={3},
+  pages={574--591},
+  year={1959},
+  publisher={Wiley Online Library}
+}
+
+
+@Article{hubel-cats2,
+  title={Receptive fields, binocular interaction and functional architecture in the cat's visual cortex},
+  author={David H. HUBEL and Torsten N. WIESEL},
+  journal={The Journal of physiology},
+  volume={160},
+  number={1},
+  pages={106--154},
+  year={1962},
+  publisher={Wiley Online Library}
+}
+
+@Article{hubel-monkeys,
+  title={Receptive fields and functional architecture of monkey striate cortex},
+  author={David H. HUBEL and Torsten N. WIESEL},
+  journal={The Journal of physiology},
+  volume={195},
+  number={1},
+  pages={215--243},
+  year={1968},
+  publisher={Wiley Online Library}
+}
+
+@Article{cnn-nlp,
+  author    = {Marc Moreno LOPEZ and Jugal KALITA},
+  title     = {Deep Learning applied to {NLP}},
+  journal   = {CoRR},
+  volume    = {abs/1703.03091},
+  year      = {2017},
+  url       = {http://arxiv.org/abs/1703.03091},
+  archivePrefix = {arXiv},
+  eprint    = {1703.03091},
+  timestamp = {Wed, 07 Jun 2017 13:42:30 +0100},
+}
+
 @Article{selective-search,
   title = {Selective Search for Object Recognition},
   author = {Jasper R. R. UIJLINGS and Koen E. A. van de SANDE and Theo GEVERS and Arnold W. M. SMEULDERS},
