--- a/text/thesiscvut.sty
+++ b/text/thesiscvut.sty
@@ -595,9 +595,9 @@ I declare that the work presented here is, to the best of my knowledge and belie
 	{\end{thebibliography} \newpage}
 	
 %% Predefinovani seznamu priloh
-\newcommand\loaname{Přílohy}
+\newcommand\loaname{Appendix}
 \newcommand\seznampriloh{%
-  \chapter*{		%PŘÍLOHY}
+  \chapter*{		%APPENDIX}
   \loaname
    \@mkboth{%
      \MakeUppercase\loaname}{\MakeUppercase\loaname}}%
