--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -31,6 +31,9 @@
 	\novazkratka{RoI}
 	      {RoI}
 	      {Region of interest}
+	\novazkratka{ReLU}
+	      {ReLU}
+	      {Rectified Linear Unit}
 	\novazkratka{RPN}
 	      {RPN}
 	      {Region proposal network}
