--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -6,6 +6,17 @@
     year={2016}
 }
 
+@incollection{conv-imagenet,
+title = {ImageNet Classification with Deep Convolutional Neural Networks},
+author = {Alex KRIZHEVKY and Ilya SUTSKEVER and Geoffrey E. HINTON},
+booktitle = {Advances in Neural Information Processing Systems 25},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+
 @Article{simple-cells,
   title={Linearity and normalization in simple cells of the macaque primary visual cortex},
   author={Matteo CARANDINI and David J. HEEGER and J. Anthony MOVSHON},
