--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -6,15 +6,35 @@
     year={2016}
 }
 
-@incollection{conv-imagenet,
-title = {ImageNet Classification with Deep Convolutional Neural Networks},
-author = {Alex KRIZHEVKY and Ilya SUTSKEVER and Geoffrey E. HINTON},
-booktitle = {Advances in Neural Information Processing Systems 25},
-editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
-pages = {1097--1105},
-year = {2012},
-publisher = {Curran Associates, Inc.},
-url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+@book{tricks,
+    title={Neural Networks: Tricks of the Trade},
+    author={Geneviève ORR and Klaus-Robert MÜLLER},
+    publisher={Springer},
+    year={1998}
+}
+
+@Article{all-conv-net,
+  title     = {Striving for Simplicity: The All Convolutional Net},
+  author    = {Jost Tobias SPRINGERBERG and Alexey DOSOVITSKYI and Thomas BROX and Martin A. RIEDMILLER},
+  journal   = {CoRR},
+  volume    = {abs/1412.6806},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.6806},
+  archivePrefix = {arXiv},
+  eprint    = {1412.6806},
+  timestamp = {Wed, 07 Jun 2017 14:42:59 +0200}
+}
+
+@Article{batch-norm,
+  title     = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+  author    = {Sergey IOFFE and Christian SZEGEDY},
+  journal   = {CoRR},
+  volume    = {abs/1502.03167},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1502.03167},
+  archivePrefix = {arXiv},
+  eprint    = {1502.03167},
+  timestamp = {Wed, 07 Jun 2017 14:40:49 +0200}
 }
 
 @Article{simple-cells,
@@ -151,4 +171,25 @@ url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convol
   author = {Tsung-Yi LIN and Piotr DOLLÁR and Ross GIRSHICK and Kaiming HE and Bharath HARIHARAN and Serge BELONGIE},
   booktitle = {Conference on Computer Vision and Pattern Recognition ({CVPR})},
   year = {2017},
+}
+
+@conference{avg-pooling,
+  title = {A Theoretical Analysis of Feature Pooling in Visual Recognition},
+  author = {Y-Lan BOUREAU and J. PONCE and Yann LECUNN},
+  booktitle = {Proceedings, 27th International Conference on Machine Learning {ICML}},
+  year = {2010}
+}
+
+@conference{l2-pooling,
+  title={Building high-level features using large scale unsupervised learning},
+  author={Q. V. LE},
+  booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing},
+  year={2013}
+}
+
+@conference{stoch-pooling,
+  title = {Stochastic pooling for regularization of deep convolutional neural networks},
+  author = {Matthew ZEILER and Robert FERGUS},
+  booktitle = {Proceedings of the International Conference on Learning Representation {ICLR}},
+  year = {2013}
 }
