--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -34,6 +34,9 @@
 	\novazkratka{ReLU}
 	      {ReLU}
 	      {Rectified Linear Unit}
+	\novazkratka{FC}
+	      {FC}
+	      {Fully connected}
 	\novazkratka{RPN}
 	      {RPN}
 	      {Region proposal network}
